--- a/70_pf/tylenol/css/sub/headache.css
+++ b/70_pf/tylenol/css/sub/headache.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
-@import url(../reset.css);
-@import url(./header_sub.css);
-@import url(../footer.css);
+@import url(/w0310/70_pf/tylenol/css/reset.css);
+@import url(/w0310/70_pf/tylenol/css/sub/header_sub.css);
+@import url(/w0310/70_pf/tylenol/css/footer.css);
 
 :root {
     --gray: #e9ecef;
