--- a/70_pf/tylenol/css/sub/header_sub.css
+++ b/70_pf/tylenol/css/sub/header_sub.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url(../reset.css);
+@import url(/w0310/70_pf/tylenol/css/reset.css);
 
 .header {
     position: relative;
