--- a/70_pf/tylenol/css/sub/helpcenter.css
+++ b/70_pf/tylenol/css/sub/helpcenter.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
-@import url(../reset.css);
-@import url(./header_sub.css);
-@import url(../footer.css);
+@import url(/w0310/70_pf/tylenol/css/reset.css);
+@import url(/w0310/70_pf/tylenol/css/sub/header_sub.css);
+@import url(/w0310/70_pf/tylenol/css/footer.css);
 
 :root {
     --gray: #e9ecef;
@@ -17,7 +17,6 @@ button {
     background: transparent;
 }
 
-/* section+footer */
 .helpcenter_body {
     display: flex;
     flex-direction: column;
@@ -38,14 +37,23 @@ body {
     flex: 1;
 }
 
+#helpcenter>div {
+    padding: 110px 20px 0;
+}
+
 .helpcenter_container {
-    padding: 50px 20px 0;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    padding-top: 50px;
+    margin: 0 auto;
+    gap: 50px;
 }
 
 .helpcenter_title {
     text-align: center;
+    padding-bottom: 40px;
+
 }
 
 .helpcenter_title h2 {
@@ -53,41 +61,68 @@ body {
     font-weight: bold;
 }
 
-.container1.part1 {
-    padding-bottom: 60px;
-}
-.container1.part2 {
-    padding-bottom: 100px;
-}
-.container1.part3 {
-    padding-bottom: 30px;
-}
-
-.sub_menu li > a:hover {
-    background: var(--red);
-    color: var(--white);
-}
-
-/* 본문 */
-.helpcenter_container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0 auto;
-}
-
-.container1_title {
-    padding-top: 60px;
-    padding-bottom: 40px;
-}
-
 .container1_title h3 {
     text-align: center;
     font-size: 1.8rem;
+    margin-bottom: 50px;
+}
+
+.container1.part1 {
+    padding-bottom: 60px;
+}
+
+.container1.part2 {
+    padding-bottom: 100px;
+}
+
+.container1.part3 {
+    padding-bottom: 30px;
+    width: 100%;
 }
 
 .container1 p:first-child {
     font-weight: bold;
+}
+
+.must1 {
+    color: var(--red);
+    margin-right: 8px;
+}
+
+.container2 {
+    flex: 0 0 50%;
+}
+
+.container2_t {
+    font-weight: bold;
+}
+
+.container2_input {
+    background: var(--contentsGray);
+    padding: 20px;
+}
+
+.container2_left {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
+    margin-bottom: 80px;
+}
+
+.fields {
+    display: flex;
+    gap: 30px;
+}
+
+.sub_menu li>a:hover {
+    background: var(--red);
+    color: var(--white);
+}
+
+.container2_right .fields {
+    display: flex;
+    flex-direction: column;
 }
 
 .tabs a:hover {
@@ -117,168 +152,25 @@ body {
 
 /* tablet */
 @media (min-width: 768px) {
-    .sub_title h2 {
+    .helpcenter_container {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .helpcenter_title h2 {
         font-size: 4.5rem;
         font-weight: bold;
-    }
-
-    .sub_menu li > a {
-        display: block;
-        padding: 16px 36px;
-        align-items: center;
-        background: var(--gray);
-        color: var(--menuText);
-        font-size: 1.5rem;
-        font-weight: 700;
-        border-radius: 30px;
-    }
-
-    .guide_title h3 {
-        font-size: 3rem;
-    }
-
-    .tab_section {
-        margin-bottom: 140px;
-    }
-
-    .tabs a {
-        font-size: 1.6rem;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-    }
-
-    .tab-content {
-        padding: 50px;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-    }
-
-    .guide_left > div {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-areas:
-            "c1"
-            "g3"
-            "c2";
-    }
-
-    .left_container_2 {
-        text-align: start;
-        grid-area: c2;
-    }
-
-    .guide_left_1 {
-        font-size: 2rem;
-        font-weight: bold;
-    }
-
-    .guide_left_2 {
-        margin-top: 10px;
-        font-size: 3rem;
-        font-weight: bold;
-        line-height: 1.3;
-    }
-
-    .guide_left_3 {
-        font-size: 1.8rem;
-        margin-top: 20px;
-        margin-bottom: 30px;
-        align-items: start;
-        height: auto;
-    }
-
-    .right_box_1 {
-        font-size: 1.6rem;
-    }
-
-    .guide_layout {
-        flex-direction: row;
-        gap: 80px;
-        justify-content: space-between;
-    }
-
-    .guide_left {
-        flex: 0 0 30%;
-        /* 좌측 폭 30% 고정 */
-    }
-
-    .right_container.what_headache {
-        flex: 1;
-        /* 우측 나머지 폭 */
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-        padding-top: 40px;
     }
 }
 
 /* desktop */
 @media (min-width: 1300px) {
-    .sub_container {
+    #helpcenter>div {
         padding: 110px 160px 0;
     }
 
-    .sub_title h2 {
+    .helpcenter_title h2 {
         font-size: 7rem;
         font-weight: bold;
-    }
-
-    .sub_menu li > a {
-        display: block;
-        padding: 16px 36px;
-        align-items: center;
-        background: var(--gray);
-        color: var(--text);
-        font-size: 1.8rem;
-        font-weight: 700;
-        border-radius: 30px;
-    }
-
-    .guide_title h3 {
-        font-size: 5rem;
-    }
-
-    .guide_layout {
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    .guide_left_1 {
-        font-size: 2.4rem;
-        font-weight: bold;
-    }
-
-    .guide_left_2 {
-        margin-top: 30px;
-        font-size: 5rem;
-        font-weight: bold;
-        line-height: 1.3;
-    }
-
-    .guide_left_3 {
-        font-size: 2.2rem;
-        margin-top: 20px;
-        margin-bottom: 30px;
-    }
-
-    .right_container {
-        padding-top: 80px;
-    }
-
-    .right_container.what_headache {
-        grid-template-columns: repeat(4, 1fr);
-        /* 가로 4칸 고정 */
-        grid-template-rows: repeat(2, auto);
-        /* 세로 2줄 고정 */
-    }
-
-    .right_container.head_soultion {
-        grid-template-columns: repeat(3, 1fr);
-    }
-
-    .wide {
-        grid-column: span 3; /* 가로 3칸 전체 차지 */
-    }
-
-    .tabs a {
-        font-size: 2.2rem;
     }
 }
