--- a/70_pf/hubble_react/src/css/Abouts.css
+++ b/70_pf/hubble_react/src/css/Abouts.css
@@ -1,6 +1,5 @@
 .main {
     width: 100%;
-    height: 100vh;
     margin: 0 auto;
     background: url(../images/nasa3.jpg) no-repeat 50% 50% / cover fixed;
     color: var(--white);
@@ -22,13 +21,30 @@
     font-size: 3rem;
 }
 
+.text2 {
+    margin-top: 50px;
+}
+
+.text2 div {
+    margin-bottom: 20px;
+}
+
+.port {
+    display: flex;
+    gap: 10px;
+}
+
+
+.text2 h3 {
+    margin-bottom: 8px;
+}
+
 .contact {
-    text-align: end;
     padding-top: 50px;
 }
 
 .contact a {
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 /* 타블렛 */
