--- a/70_pf/hubble_react/src/css/Abouts.css
+++ b/70_pf/hubble_react/src/css/Abouts.css
@@ -34,26 +34,48 @@
     gap: 10px;
 }
 
-
 .text2 h3 {
     margin-bottom: 8px;
 }
 
 .contact {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 5px;
     padding-top: 50px;
 }
 
 .contact a {
+    display: block;
     font-size: 2rem;
 }
 
 /* 타블렛 */
 @media (min-width: 768px) {
     .main_container {
-        padding: 150px;
         display: flex;
         flex-direction: column;
-        text-align: left;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .contact {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 5px;
+        padding-top: 50px;
+    }
+
+    .text2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 50px;
+    }
+
+    .port {
         justify-content: center;
     }
 }
