--- a/70_pf/jeep/css/footer.css
+++ b/70_pf/jeep/css/footer.css
@@ -36,13 +36,12 @@
 .footer_box {
     margin-top: 80px;
     display: flex;
-    height: 258px;
 }
 
 /* 검색박스 */
 .footer_search {
     position: relative;
-    width: 468px;
+    width: 100%;
     height: 90px;
 }
 
