--- a/70_pf/tylenol/css/sub/helpcenter.css
+++ b/70_pf/tylenol/css/sub/helpcenter.css
@@ -17,6 +17,10 @@ button {
     background: transparent;
 }
 
+input, select, textarea {
+    border: transparent;
+}
+
 .helpcenter_body {
     display: flex;
     flex-direction: column;
@@ -113,6 +117,15 @@ body {
 .fields {
     display: flex;
     gap: 30px;
+}
+
+.form-row {
+    vertical-align: top;
+}
+
+#message {
+    width: 100%;
+    height: 150px;
 }
 
 .sub_menu li>a:hover {
